// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Backlink component snapshot > matches as overview snapshot 1`] = `
<p
  className="backlink"
  id="backlink"
>
  <a
    className="underline"
    onClick={[Function]}
  >
    ← Back to overview
  </a>
</p>
`;

exports[`Backlink component snapshot > matches as streamgraph snapshot 1`] = `
<p
  className="backlink backlink-streamgraph"
  id="backlink"
>
  <a
    className="underline"
    onClick={[Function]}
  >
    ← Back to overview
  </a>
</p>
`;
